Added option to cancel process of renaming files

--- a/app/pages/worker.html
+++ b/app/pages/worker.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>I'm a hidden worker</title>
+    <title>Worker Process</title>
+    <script>window.$ = window.jQuery = require('jquery');</script>
     <script>require("./worker")</script>
-  </head>
-  <body>
-  </body>
+</head>
+<body>
+</body>
 </html>
