--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 
-	<div class="modal" id="progressProcessing" tabindex="-1" role="dialog" aria-labelledby="progressLoadingMetadata" aria-hidden="false">
+	<div class="modal" id="progressProcessing" tabindex="-1" role="dialog" aria-labelledby="progressLoadingMetadata" aria-hidden="false" data-backdrop="static" data-keyboard="false">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -48,13 +48,14 @@
 						<div id="processingProgressBar"></div>
 						<div id="processingProgressBarPercentage"></div>
 					</div>
+					<button type="button" class="btn btn-danger float-right" id="btnCancelProcessing">Cancel</button>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- Modal error box for pre validation problems (i.e. metadata headers) -->
-	<div class="modal fade" id="errorModalPre" tabindex="-1" role="dialog" aria-labelledby="errorModalPre" aria-hidden="true">
+	<div class="modal" id="errorModalPre" tabindex="-1" role="dialog" aria-labelledby="errorModalPre" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -100,19 +101,41 @@
 	<div class="modal modal" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModal" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="successModal">Processing Complete</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
-				</button>
+				<div class="modal-header">
+					<h5 class="modal-title" id="successModal">Processing Complete</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<h6>Your files have been renamed</h6>
+					<p>Please check your metadata directory for your renamed files.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+				</div>
 			</div>
-			<div class="modal-body">
-				<h6>Your files have been renamed</h6>
-				<p>Please check your metadata directory for your renamed files.</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
-			</div>
+		</div>
+	</div>
+
+	<div class="modal modal" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="cancelModal" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="cancelModal">Processing Cancelled</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<h6>File renaming cancelled</h6>
+					<p>You have chosen to cancel the renaming processing.</p>
+					<p>Any files that have been renamed already will remain in your output directory.</p>
+					<p>Refresh the your metadata before trying to start the renaming process again as some files may already exist.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+				</div>
 			</div>
 		</div>
 	</div>
