--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -54,8 +54,30 @@
 		</div>
 	</div>
 
+	
+	<div class="modal modal-success" id="metadataFine" tabindex="-1" role="dialog" aria-labelledby="metadataFine" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="metadataFine">Metadata Loaded</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<h6>Your Metadata has been loaded and checked</h6>
+					<p>The metadata you have loaded correctly lists all files and data.</p>
+					<p>Please check your new metadata before choosing to "Start Processing" your files.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- Modal error box for pre validation problems (i.e. metadata headers) -->
-	<div class="modal" id="errorModalPre" tabindex="-1" role="dialog" aria-labelledby="errorModalPre" aria-hidden="true">
+	<div class="modal modal-error" id="errorModalPre" tabindex="-1" role="dialog" aria-labelledby="errorModalPre" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
