--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -212,7 +212,7 @@
 	<div id="gettingStarted">
 		<div class="container">
 			<div class="row">
-				<div class="col">
+				<div class="col-6">
 					<h2>1. Getting started</h2>
 					<p>
 						To start renaming your files, first we need to know what your metadata is going to look like and how you'd like to rename your files.
@@ -221,21 +221,60 @@
 						Select the project you're working on from the drop down menu on the right.
 					</p>
 				</div>
-				<div class="col">
-					<div class="row">
-						<div class="col">
-							<h5>Select Project</h5>
-							<select id="selectRenamer" name="selectRenamer" class="mdb-select md-form"></select>
-						</div>
-					</div>
+				<div class="col-6">
+					<h5>Select Project</h5>
+					<select id="selectRenamer" name="selectRenamer" class="mdb-select md-form"></select><br />
 					<div id="exampleDataDownload">
-						<div class="row">
-							<div class="col">
-								<h5>Example Metadata</h5>
-								<p>If you've not yet started collecting your metadata you can create an blank file for your selected project to make sure it will work correctly.</p>
-								<button id="btnDownloadExampleCsv" class="btn btn-primary btn-block">Create Blank Metadata File</button>
-							</div>
-						</div>
+						<br />
+						<button id="btnShowProjectSettings" class="btn btn-info btn-block" type="button" data-toggle="collapse" data-target="#renamerInfoCollapsible" aria-expanded="false" aria-controls="renamerInfoCollapsible">
+							Show Project Settings
+						</button>
+						<br />
+						<h5>Example Metadata</h5>
+						<p>If you've not yet started collecting your metadata you can create an blank file for your selected project to make sure it will work correctly.</p>
+						<button id="btnDownloadExampleCsv" class="btn btn-info btn-block">Create Blank Metadata File</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Information about the renamer profile loaded -->
+	<div class="collapse" id="renamerInfoCollapsible">
+		<div id="renamerInfo">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<h4>Selected Project</h4>
+						<hr/>
+						<p><strong>Title:</strong> <span id="renamerName"></span></p>
+						<p><strong>Webiste:</strong> <a id="renamerUrl" target="_blank">Visit website</a></p>
+						<p><strong>Description:</strong> <span id="renamerDesc"></span></p>
+					</div>
+					<div class="col">
+						<h4>Renamer Properties</h4>
+						<hr/>
+						<p><strong>Current Filename Column:</strong> <span id="renamerMetadataCurrentFilenameColumn"></span></p>
+						<p><strong>Old Filename Column:</strong> <span id="renamerMetadataOldFilenameColumn"></span></p>
+						<p><strong>New Filename Column:</strong> <span id="renamerMetadataNewFilenameColumn"></span></p>
+
+						<p><strong>Trim Headers &amp; Data:</strong> <span id="renamerTrimHeadersAndData"></span></p>
+						<p><strong>Missing Data Tag:</strong> <span id="renamerMissingDataTag"></span></p>
+					</div>
+					<div class="col">
+						<h4>New Filename Data</h4>
+						<hr/>
+						<p><strong>Property Seperator:</strong> <span id="renamerFilenamePropertySeperator"></span></p>
+						<p><strong>Value Seperator:</strong> <span id="renamerFilenameValueSeperator"></span></p>
+						<span id="renamerColumns"></span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<br />
+						<button class="btn btn-info float-right" type="button" data-toggle="collapse" data-target="#renamerInfoCollapsible" aria-expanded="false" aria-controls="renamerInfoCollapsible">
+							Close Project Settings
+						</button>
 					</div>
 				</div>
 			</div>
@@ -249,7 +288,7 @@
 				<div class="col">
 					<h2>2. Load your Metadata</h2>
 					<p>
-						Now that we know what project you're working on, and if you're happy with the <a id="linkScrollToRenamerInfo" href="#">project settings outlined below</a>, we can load your metadata:
+						Now that we know what project you're working on, and if you're happy with the <a data-toggle="collapse" href="#renamerInfoCollapsible" role="button" aria-expanded="false" aria-controls="collapseExample">project settings outlined above</a>, we can load your metadata:
 					</p>
 					<p>
 						<button id="btnFileSelect" class="btn btn-primary btn-block">Select Metadata File</button>
@@ -260,7 +299,7 @@
 						If you've made changes to your metadata to fix any errors, or even if you're just added new data since you last loaded it, click below to refresh and check all your files.
 					</p>
 					<p>
-						<button id="btnRefershMetadata" class="btn btn-info btn-block">Refresh</button>
+						<button id="btnRefershMetadata" class="btn btn-info btn-block" disabled>Refresh</button>
 					</p>	
 				</div>
 				<div class="col">
@@ -401,49 +440,16 @@
 		</div>
 	</div>
 
-	<!-- Information about the renamer profile loaded -->
-	<div id="renamerInfo">
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<a id="renamerInfo"></a>
-					<h4>Selected Project Settings</h4>
-					<hr/>
-					<p><strong>Title:</strong> <span id="renamerName"></span></p>
-					<p><strong>Description:</strong> <span id="renamerDesc"></span></p>
-					<p><strong>Website:</strong> <a id="renamerUrl" target="_blank">Visit website</a></p>
-				</div>
-				<div class="col">
-					<h4>Renamer Properties</h4>
-					<hr/>
-					<p><strong>Current Filename Column:</strong> <span id="renamerMetadataCurrentFilenameColumn"></span></p>
-					<p><strong>Old Filename Column:</strong> <span id="renamerMetadataOldFilenameColumn"></span></p>
-					<p><strong>New Filename Column:</strong> <span id="renamerMetadataNewFilenameColumn"></span></p>
-
-					<p><strong>Trim Headers &amp; Data:</strong> <span id="renamerTrimHeadersAndData"></span></p>
-					<p><strong>Missing Data Tag:</strong> <span id="renamerMissingDataTag"></span></p>
-				</div>
-				<div class="col">
-					<h4>New Filename Data</h4>
-					<hr/>
-					<p><strong>Property Seperator:</strong> <span id="renamerFilenamePropertySeperator"></span></p>
-					<p><strong>Value Seperator:</strong> <span id="renamerFilenameValueSeperator"></span></p>
-					<span id="renamerColumns"></span>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<!-- The metadata list -->
 	<div id="results">
-		<div class="container">
+		<!--<div class="container">
 			<div class="row">
 				<div class="col">
 					<h4>Loaded Data</h4>
 					<hr />
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col">
