--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -185,10 +185,10 @@
 					<p class="lead">Welcome to the Leverhulme Research Centre for Forensic Science File Renamer.</p>
 					<hr>
 					<p>
-						This application has been developed to help you automaticlaly rename files for your project based on your metadata.
+						This application has been developed to help you automatically rename files for your project based on your metadata.
 					</p>
 					<p>
-						With this application you can automatically rename hunderds of files from: <br />
+						With this application you can automatically rename hundreds of files from: <br />
 						<strong>DCS_0002.jpg</strong> to <strong>20201231-Exp1-Rep2-UVLIGHT.jpg</strong>
 					</p>
 					<p>
