Added checkes for maxtextlenght and added filename to generated example file

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -406,8 +406,17 @@
 					<h4>Missing Data</h4>
 					<hr />
 					<p>The following rows have text that is missing.</p>
-					<p>Please ensure that the following rows contain valus or specifically use '<span id="errorEmptyData"></span>'.</p>
+					<p>Please ensure that the following rows contain values or specifically use '<span id="errorEmptyData"></span>'.</p>
 					<ul id="eText"></ul>
+				</div>
+			</div>
+			<div class="row" id="errorTextOverMaxLength">
+				<div class="col">
+					<h4>Text too long</h4>
+					<hr />
+					<p>The following rows have text that is too long.</p>
+					<p>Please ensure that the following rows contain text no longer than each column specifies.</p>
+					<ul id="eTextMaxLength"></ul>
 				</div>
 			</div>
 			<div class="row" id="errorDate">
