--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -376,11 +376,26 @@
 					<h4>Files Missing</h4>
 					<hr />
 					<p>The following files are missing and can not be found in the same folder as your metadata.</p>
+					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensative</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p>
 						Please check these files exist in:<br />
 						<span id="errorFilesMissingFolder"></span>
 					</p>
 					<ul id="e1"></ul>
+				</div>
+			</div>
+			<div class="row" id="errorExtraFiles">
+				<div class="col">
+					<h4>Extra Files</h4>
+					<hr />
+					<p>The following files have been found in your metadata directory that are not referenced by your metadata.</p>
+					<p>Please store only the files assocaited with your metadata in the same folder as your metadata.</p>
+					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensative</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p>
+						Please remove the following files form your metadata directory OR update your metadata to correctly reference these files:<br />
+						<span id="errorExtraFilesFolder"></span>
+					</p>
+					<ul id="errorExtraFilesList"></ul>
 				</div>
 			</div>
 			<div class="row" id="errorFilenameExists">
@@ -400,7 +415,7 @@
 					<h4>Same Current Filename</h4>
 					<hr />
 					<p>The following lines in your metadata contain duplicate filenames. Duplicate filenames means that we can't assocaite one record of your metadata with that file and as such it can not be renamed.</p>
-					<p>Please ensure that your metadata rows correctly reference the appropriate files and correct any errors.</p>
+					<p>Please ensure that each line of your metadata correctly references a unique filename and correct any errors.</p>
 					<ul id="e3"></ul>
 				</div>
 			</div>
@@ -408,7 +423,7 @@
 				<div class="col">
 					<h4>Same New Filename</h4>
 					<hr />
-					<p>The following lines in your metadata will generate new files that have the same name. Where different files represent different peices of data your metadata should individual distinguish them.</p>
+					<p>The following lines in your metadata will generate new files that have the same name.</p>
 					<p>Please ensure that metadata is correct and uniquely identifies each image.</p>
 					<ul id="e4"></ul>
 				</div>
@@ -418,7 +433,7 @@
 					<h4>Missing Data</h4>
 					<hr />
 					<p>The following lines in your metadata have text that is missing.</p>
-					<p>Please ensure that the following rows contain values or specifically use '<span id="errorEmptyData"></span>'.</p>
+					<p>Please ensure that the following lines your metadata specify values in their required columns.</p>
 					<ul id="eText"></ul>
 				</div>
 			</div>
@@ -427,7 +442,7 @@
 					<h4>Text too long</h4>
 					<hr />
 					<p>The following lines in your metadata have text that is too long.</p>
-					<p>Please ensure that the following rows contain text no longer than each column specifies.</p>
+					<p>Please ensure that the following lines contain text no longer than each column allows.</p>
 					<ul id="eTextMaxLength"></ul>
 				</div>
 			</div>
@@ -436,7 +451,7 @@
 					<h4>Empty/Null Data Errors</h4>
 					<hr />
 					<p>The following lines in your metadata are missing data that is required.</p>
-					<p>Please ensure that the following rows/columns contain data in the correct format.</p>
+					<p>Please ensure that the following lines/columns contain data in the correct format.</p>
 					<ul id="eNull"></ul>
 				</div>
 			</div>
@@ -444,8 +459,8 @@
 				<div class="col">
 					<h4>Date Errors</h4>
 					<hr />
-					<p>The following rows have date columns that could not be parsed correctly.</p>
-					<p>Please ensure that the following rows contain dates in the correct format.</p>
+					<p>The following lines have date columns that are not specified in the correct format.</p>
+					<p>Please ensure that the following lines contain dates in the correct format (taking note of removing spaces, dashes etc)</p>
 					<ul id="eDate"></ul>
 				</div>
 			</div>
@@ -453,8 +468,8 @@
 				<div class="col">
 					<h4>Integer Number Errors</h4>
 					<hr />
-					<p>The following rows have integer (whole number) columns that could not be parsed correctly.</p>
-					<p>Please ensure that the following rows contain only integers.</p>
+					<p>The following lines have integer (whole number) columns that have errors.</p>
+					<p>Please ensure that the following lines contain whole numbers in the specified column and are within the allowable range.</p>
 					<ul id="eInt"></ul>
 				</div>
 			</div>
@@ -462,8 +477,8 @@
 				<div class="col">
 					<h4>Float Number Errors</h4>
 					<hr />
-					<p>The following rows have float (numbers with decimals places) columns that could not be parsed correctly.</p>
-					<p>Please ensure that the following rows contain only floats.</p>
+					<p>The following lines have float (numbers with decimals places) columns that have errors.</p>
+					<p>Please ensure that the following lines contain only decimal numbers and are within the allowable range.</p>
 					<ul id="eFloat"></ul>
 				</div>
 			</div>
