Added support for opening links in default browser

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -130,11 +130,21 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<h6>Your files have been renamed</h6>
+					<h5>Your files have been renamed</h5>
 					<p>
-						Please find a copy of your data in:<br />
-						<strong><a href="#" id="outputDir"></a></strong>
+						Please find a copy of your data in:
 					</p>
+					<strong><a href="#" id="outputDir" class="btn btn-primary btn-lg btn-block"></a></strong>
+					<div id="makeSubmissionPanel">
+						<hr />
+						<h5>
+							Submit Your Data
+						</h5>
+						<p>
+							<span id="makeSubmissionInfo"></span>
+						</p>
+						<a id="makeSubmissionLink" target="_blank" class="btn btn-primary btn-lg btn-block">Submit Your Data Online</a>
+					</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
