--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -257,7 +257,7 @@
 						<h4>Metadata Requirements</h4>
 						<hr/>
 						<p><strong>Project Name:</strong> <span id="renamerName"></span></p>
-						<p><strong>Webiste:</strong> <a id="renamerUrl" target="_blank">Visit website</a></p>
+						<p><strong>Website:</strong> <a id="renamerUrl" target="_blank">Visit website</a></p>
 						<p><strong>Description:</strong> <span id="renamerDesc"></span></p>
 					</div>
 					<div class="col-4">
@@ -407,11 +407,11 @@
 				<div class="col">
 					<h4>Extra Files</h4>
 					<hr />
-					<p>The following files have been found in your metadata directory that are not referenced by your metadata.</p>
+					<p>The following files/folders have been found in your metadata directory that are not referenced by your metadata.</p>
 					<p>Please store only the files assocaited with your metadata in the same folder as your metadata.</p>
 					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensative</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p>
-						Please remove the following files form your metadata directory OR update your metadata to correctly reference these files:<br />
+						Please remove the following files/folders form your metadata directory OR update your metadata to correctly reference these files:<br />
 						<span id="errorExtraFilesFolder"></span>
 					</p>
 					<ul id="errorExtraFilesList"></ul>
