--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -390,6 +390,16 @@
 	<!-- Error lists for problems with metadata checks -->
 	<div id="errorLists">
 		<div class="container">
+			<div class="row" id="errorFileCapitalisation">
+				<div class="col">
+					<h4>Filename Capitalisation/Accent Errors</h4>
+					<hr />
+					<p>The following files listed in your metadata appear to closely match files on your system.</p>
+					<p>Filenames, including extension, are <strong>case sensative</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p><strong>Please ensure the following files are renamed to match exactly:</strong></p>
+					<ul id="eCaps"></ul>
+				</div>
+			</div>
 			<div class="row" id="errorFilesMissing">
 				<div class="col">
 					<h4>Files Missing</h4>
