--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -402,7 +402,7 @@
 					<hr />
 					<p>The following files listed in your metadata appear to closely match files on your system.</p>
 					<p>Filenames, including extension, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
-					<p><strong>Please ensure the following files are renamed to match exactly:</strong></p>
+					<p><strong>FIX:</strong> Ensure the following files are renamed to match exactly how they appear in your metadata:</p>
 					<ul id="eCaps"></ul>
 				</div>
 			</div>
@@ -413,7 +413,7 @@
 					<p>The following files are missing and can not be found in the same folder as your metadata.</p>
 					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p>
-						Please check these files exist in:<br />
+						<strong>FIX:</strong> In the following folder, ensure that the files listed below exist:<br />
 						<span id="errorFilesMissingFolder"></span>
 					</p>
 					<ul id="e1"></ul>
@@ -427,7 +427,7 @@
 					<p>Please store only the files associated with your metadata in the same folder as your metadata.</p>
 					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p>
-						Please remove the following files/folders form your metadata directory OR update your metadata to correctly reference these files:<br />
+						<strong>FIX:</strong> Please remove the following files/folders form your metadata directory <strong>OR</strong> update your metadata to correctly reference these files:<br />
 						<span id="errorExtraFilesFolder"></span>
 					</p>
 					<ul id="errorExtraFilesList"></ul>
@@ -439,7 +439,7 @@
 					<hr />
 					<p>The following lines in your metadata will generate new filenames that already exist in the output folder.</p>
 					<p>
-						Please move the existing files or change the output directory:<br />
+						<strong>FIX:</strong> Please move the existing files or change the output directory to a different location:<br />
 						<span id="errorOutputFolder"></span>
 					</p>
 					<ul id="e2"></ul>
@@ -451,6 +451,7 @@
 					<hr />
 					<p>The following lines in your metadata contain duplicate filenames. Duplicate filenames means that we can't associate one record of your metadata with that file and as such it can not be renamed.</p>
 					<p>Please ensure that each line of your metadata correctly references a unique filename and correct any errors.</p>
+					<p><strong>FIX:</strong> Remove the duplicate rows in your metadata <strong>OR</strong> update the Filename in the row to reference the correct file.</p>
 					<ul id="e3"></ul>
 				</div>
 			</div>
@@ -459,7 +460,8 @@
 					<h4>Same New Filename</h4>
 					<hr />
 					<p>The following lines in your metadata will generate new files that have the same name.</p>
-					<p>Please ensure that metadata is correct and uniquely identifies each image.</p>
+					<p>Please ensure that metadata is correct and uniquely identifies each file.</p>
+					<p><strong>FIX:</strong> Update the column data for each row so that it is unique. If multiple file represent the same data it is likely that you should change the experiment/replicate number in your metadata to ensure that each row is unique.</p>
 					<ul id="e4"></ul>
 				</div>
 			</div>
@@ -468,7 +470,8 @@
 					<h4>Missing Data</h4>
 					<hr />
 					<p>The following lines in your metadata have text that is missing.</p>
-					<p>Please ensure that the following lines your metadata specify values in their required columns.</p>
+					<p>Please ensure that the following lines in your metadata specify values in their required columns.</p>
+					<p><strong>FIX:</strong> Check the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>. For any "text" based column, that does not allow an empty value, you must specify data for the following rows:</p>
 					<ul id="eText"></ul>
 				</div>
 			</div>
@@ -478,6 +481,7 @@
 					<hr />
 					<p>The following lines in your metadata have text that is too long.</p>
 					<p>Please ensure that the following lines contain text no longer than each column allows.</p>
+					<p><strong>FIX:</strong> Ensure that the following rows/column in your metadata do exceed the maximum length allowed:</p>
 					<ul id="eTextMaxLength"></ul>
 				</div>
 			</div>
@@ -487,6 +491,7 @@
 					<hr />
 					<p>The following lines in your metadata are missing data that is required.</p>
 					<p>Please ensure that the following lines/columns contain data in the correct format.</p>
+					<p><strong>FIX:</strong> Check the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>. For any column that does not allow an empty value you must supply that data for the following rows:</p>
 					<ul id="eNull"></ul>
 				</div>
 			</div>
@@ -496,6 +501,7 @@
 					<hr />
 					<p>The following lines have date columns that are not specified in the correct format.</p>
 					<p>Please ensure that the following lines contain dates in the correct format (taking note of removing spaces, dashes etc)</p>
+					<p><strong>FIX:</strong> Check the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>. Ensure that any data column matches the format specified and update your metadata for the following rows:</p>
 					<ul id="eDate"></ul>
 				</div>
 			</div>
@@ -505,6 +511,7 @@
 					<hr />
 					<p>The following lines have integer (whole number) columns that have errors.</p>
 					<p>Please ensure that the following lines contain whole numbers in the specified column and are within the allowable range.</p>
+					<p><strong>FIX:</strong> Check the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>. Ensure that any "int" columns have number values between the minimum and maximum value for the following rows:</p>
 					<ul id="eInt"></ul>
 				</div>
 			</div>
@@ -514,6 +521,7 @@
 					<hr />
 					<p>The following lines have float (numbers with decimals places) columns that have errors.</p>
 					<p>Please ensure that the following lines contain only decimal numbers and are within the allowable range.</p>
+					<p><strong>FIX:</strong> Check the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>. Ensure that any "float" columns have decimal values between the minimum and maximum value for the following rows:</p>
 					<ul id="eFloat"></ul>
 				</div>
 			</div>
