--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -401,7 +401,7 @@
 					<h4>Filename Capitalisation/Accent Errors</h4>
 					<hr />
 					<p>The following files listed in your metadata appear to closely match files on your system.</p>
-					<p>Filenames, including extension, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p>Filenames, including extension, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a class="helpShowFileExtensions" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p><strong>FIX:</strong> Ensure the following files are renamed to match exactly how they appear in your metadata:</p>
 					<ul id="eCaps"></ul>
 				</div>
@@ -411,7 +411,7 @@
 					<h4>Files Missing</h4>
 					<hr />
 					<p>The following files are missing and can not be found in the same folder as your metadata.</p>
-					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a class="helpShowFileExtensions" target="_blank">view filenames (including extensions)</a> on your computer.</p>
 					<p>
 						<strong>FIX:</strong> In the following folder, ensure that the files listed below exist:<br />
 						<span id="errorFilesMissingFolder"></span>
@@ -425,9 +425,10 @@
 					<hr />
 					<p>The following files/folders have been found in your metadata directory that are not referenced by your metadata.</p>
 					<p>Please store only the files associated with your metadata in the same folder as your metadata.</p>
-					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p><strong>Note: </strong>Filenames, including extensions, are <strong>case sensitive</strong> and must match exactly. Use this guide to <a class="helpShowFileExtensions" target="_blank">view filenames (including extensions)</a> on your computer.</p>
+					<p>Additionally, you may way to <a class="helpShowHiddenFiles" target="_blank">view hidden files</a> on your system to remove them from this folder.</p>
 					<p>
-						<strong>FIX:</strong> Please remove the following files/folders form your metadata directory <strong>OR</strong> update your metadata to correctly reference these files:<br />
+						<strong>FIX:</strong> Please remove the following files/folders form your metadata directory (it's usually best to create an empty folder for your data to start with) <strong>OR</strong> update your metadata to correctly reference these files:<br />
 						<span id="errorExtraFilesFolder"></span>
 					</p>
 					<ul id="errorExtraFilesList"></ul>
