Added link to PDF of instructions

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -209,11 +209,18 @@
 					</p>
 				</div>
 				<div class="col-4">
-					<div class="card text-center mt-2">
+					<!--<div class="card text-center mt-2">
 						<div class="card-body">
 							<h5 class="card-title">Customise LRCFS Renamer</h5>
 							<p class="card-text">You can create your own renamer configuration files that let you customise what metadata you expect and how you want your files to be renamed.</p>
 							<a class="btn btn-primary" href="https://github.com/LRCFS/lrcfs-file-renamer#creating-a-custom-renamer-config" role="button" target="_blank"><span class="fa fa-dashboard fa-lg" aria-hidden="true"></span> Visit GitHub to find out more</a>
+						</div>
+					</div>-->
+					<div class="card text-center mt-2">
+						<div class="card-body">
+							<h5 class="card-title">Using The LRCFS File Renamer</h5>
+							<p class="card-text">If this is your first time using the LRCFS File Renamer make sure to check out the full set of instructions.</p>
+							<a class="btn btn-primary" href="https://lrcfs.dundee.ac.uk/file-renamer/downloads/readme.pdf" role="button" target="_blank">View Usage Instructions</a>
 						</div>
 					</div>
 					<div class="card text-center mt-2">
@@ -319,7 +326,7 @@
 						Now that we know what project you're working on, and if you're happy with the <a href="#" id="showMetadataRequirements">metadata requirements outlined above</a>, we can load your metadata:
 					</p>
 					<p>
-						<span class="note">Note: Before loading your metadata please ensure that your metadata and it's corresponding files are in the same directory.</span>
+						<span class="note"><strong>Note: Before loading your metadata please ensure that your metadata and it's corresponding files are in the same directory, without any extra files.</strong></span>
 					</p>
 					<p>
 						<button id="btnFileSelect" class="btn btn-primary btn-block">Select Metadata File (.csv)</button>
